test(archtest): ルールが空振りしていないことを確かめる
propagandist/.github#43 の対応（PR #46）で、org 側から指摘された。

  ★ noClasses().should() は対象が 1 つも無ければ真になる。pdfjig はそれを
    importedClassesAreNotEmpty で塞いでいるが、あれが見ているのは取り込みが空のときで、
    依存を 1 つ外しても取り込みは空にならない。ガードでは捕まらない。

2026-08-22 に POI を外して以来（b8f6654）、poiMustNotLeakOutOfCore は緑のまま
何も守っていなかった。org の security-verification.md §1.3「-（未走査）を 0 件と読むな」と
同じ型である。

直したもの

  外部ライブラリを対象にするルールに、そのライブラリへの依存が 1 つ以上あることを
  確かめる対のテスト（...RuleHasSubject）を隣に置いた。対象は PDFBox と POI の 2 つだけで、
  coreMustNotDependOnAi と aiMustNotTouchTheFileSystem は pdfjig 自身のパッケージが
  対象なので既存のガードが効いている。

  POI 関連は @Nested + @Disabled で M1 まで止めた。消さないのは M1 で戻せばそのまま
  効くからで、有効のまま残さないのは、緑だが何も守っていない状態がまさに指摘されたもの
  だからである。@Disabled なら SKIPPED としてテスト出力に残る。

壊して落ちることを確かめた

  @Disabled を一時的に外すと、問題の構造がそのまま出る。

    Apache POI の型が pdf-core の外から見えない  PASSED   ← 空振り
    POI のルールが空振りしていない              FAILED   ← ガードが検知

  落ち方は「POI への依存が 1 つも無い。poiMustNotLeakOutOfCore は緑でも何も守っていない」。
  ガード自体が空振りを検知するためのものである以上、空振りさせて落とせなければ意味がない。

あわせて、POI を外したことで覆っていた記述を 2 つ直した

  1. 「外して戻すほうが build を余計に触ることになる」（Phase 4 の判断）
     → 実際には、使っていないものを配って CVE を見続けるほうが高くついた。
  2. 「ERROR Log4j API could not find a logging provider. が stderr に出る」
     → 2026-08-23 実測で消えていた。log4j-api は POI 経由だった。ランタイムイメージから
        --add-modules=javafx.controls,javafx.swing -cp app/* で起動し、stderr が空である
        ことを確かめた。同梱される jar は 7 本で log4j 関連は無い。M1 で POI を戻すと再発する。

どちらも元の記述は消さずに訂正を追記した（org の security-verification.md §5 と同じ形）。

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>